 * `configure` now checks for `apache2ctl` if `apachectl` was not found.
 * `configure` now longer errors when no apachectl was found but warns
   that the test suite will not work.

v1.15.21
--------------------------------------------------------------------------------
 * Making h2 connection "mood swings" to ignore clients resetting
   requests which have at least produced the response headers and
   one DATA chunk. This targets long-running requests like
   websockets and server-side-events (SSE), where a RST_STREAM
   ius the cleint's only option of terminating such requests.
   With this change, clients are no longer punished for it.
   See also: <https://bz.apache.org/bugzilla/show_bug.cgi?id=65402>
   (background: "mood swings" influence how many resources are
   available to a connection, e.g. how many h2 workers may be
   working for it at a given point in time.)
 * Making H2Min/MaxWorkers behave as intended again. The module will initially
   create H2MinWorkers threads and add up to H2MaxWorkers when needed. These
   additional workers time out when idle after H2MaxWorkerIdleSeconds and
   disappear again.
 * When the shutdown of a child is detected (e.g. graceful shutdown), the
   module will terminate all idle workers above H2MinWorkers right away.
   This detection currently only happens when a HTTP/2 connection is active.
   See also #212.
 * Restoring compatibility with apache httpd 2.4.48 again.
 * Adding a docker image for testing on archlinux. Use:
   > docker-compose build archlinux
   > docker-compose run archlinux
 * Adding a docker image for testing on Debian 'sid'. Use:
   > docker-compose build debian-sid
   > docker-compose run debian-sid

v1.15.20
--------------------------------------------------------------------------------
 * requires apache httpd 2.4.48
 * Align handling of 304 response headers with behaviour of http/1.1. [ylavic]
 * now shares code with http/1.1 protocol implementation